--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -8,7 +8,7 @@
 }
 
 .cards > ul > li {
-  border: 0px solid var(--dark-color);
+  border: 0 solid var(--dark-color);
   background-color: var(--background-color)
 }
 
