--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -169,7 +169,7 @@ header nav .nav-brand .icon {
 }
 
 header nav .nav-brand .site-label {
-  display: inline;
+  display: none;
   position: relative;
   color: var(--brand-color);
   font-weight: 700;
