visual header improvements

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 /* header and nav layout */
 header .nav-wrapper {
-  background-color: var(--brand-color);
+  background-color: var(--brand-color-blue);
   width: 100%;
   z-index: 2;
   position: fixed;
@@ -19,6 +19,7 @@ header nav {
   height: var(--nav-height);
   padding: 0 1rem;
   font-family: var(--body-font-family);
+  color: var(--navtext-color);
 }
 
 header nav[aria-expanded="true"] {
@@ -147,9 +148,9 @@ header nav .nav-brand {
   transition: padding 0.3s ease;
 }
 
-header nav[aria-expanded='true'] .nav-brand {
-  /* display: none; */
-}
+/* header nav[aria-expanded='true'] .nav-brand {
+  display: none;
+} */
 
 @media (width >= 980px) {
   header nav .nav-brand {
@@ -165,13 +166,13 @@ header nav[aria-expanded='true'] .nav-brand {
 
 header nav .nav-brand .icon {
   height: unset;
-  width: 2rem;
+  width: 4rem;
 }
 
 header nav .nav-brand .site-label {
   display: none;
   position: relative;
-  color: var(--brand-color);
+  color: var(--brand-color-blue);
   font-weight: 700;
   font-size: 16px;
   letter-spacing: 1;
@@ -204,7 +205,7 @@ header nav[aria-expanded="true"] .nav-sections {
 header nav .nav-sections ul  {
   list-style: none;
   padding-left: 0;
-  font-size: var(--body-font-size-s);
+  font-size: var(--body-font-size-m);
   font-weight: 500;
 }
 
@@ -261,7 +262,7 @@ header nav .nav-sections ul > li > ul > li {
     display: flex;
     gap: 2em;
     margin: 0;
-    font-size: var(--body-font-size-xs);
+    font-size: var(--body-font-size-m);
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li {
@@ -282,7 +283,7 @@ header nav .nav-sections ul > li > ul > li {
     width: 200px;
     margin-top: 12px;
     padding: 1em;
-    background-color: var(--light-color);
+    background-color: var(--navmenu-color);
     white-space: initial;
   }
 
@@ -295,7 +296,7 @@ header nav .nav-sections ul > li > ul > li {
     height: 0;
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
-    border-bottom: 8px solid var(--light-color);
+    border-bottom: 8px solid var(--navmenu-color);
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li > ul > li {
