--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -3,9 +3,9 @@
   flex-direction: column;
 }
 
-.columns img {
+/* .columns img {
   width: 100%;
-}
+} */
 
 .columns > div > div {
   order: 1;
@@ -17,6 +17,12 @@
 
 .columns > div > .columns-img-col img {
   display: block;
+}
+
+/* contains image with person, made round with max width 50%, aligned to the right */
+.columns.authors img {
+  max-width: 50%;
+  border-radius: 50%;
 }
 
 @media (width >= 900px) {
