--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   src:  local('Roboto'), url('../fonts/roboto-regular.woff2') format('woff');
   font-weight: 400;
   font-style: normal;
