--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -323,3 +323,12 @@ header nav p.button-container a.button {
 header nav .nav-tools {
   grid-area: tools;
 }
+
+header nav .nav-tools .icon {
+  width: 30px;
+  height: 30px;
+}
+
+header nav .nav-tools .icon-spain {
+  padding-right: .8rem;
+}
