--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,7 @@
   --navmenu-color: #54A9DA;
 
   /* fonts */
-  --body-font-family: 'Roboto', sans-serif;
+  --body-font-family: 'Frutiger', sans-serif;
   --heading-font-family: var(--font-family);
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
@@ -47,8 +47,8 @@
 }
 
 @font-face {
-  font-family: Roboto;
-  src:  local('Roboto'), url('../fonts/roboto-regular.woff2') format('woff');
+  font-family: Frutiger;
+  src:  local('Frutiger'), url('../fonts/frutiger-roman.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
